[workspace]
members = [
    "crates/composer",
    "crates/composer_api",
    "crates/dtrace-sys",
    "crates/test_probe",
    "crates/ptrace_probe",
]

# Specify a subset of member crates that compile on all supported architectures.
default-members = [
    "crates/composer_api",
    "crates/composer",
    "crates/test_probe",
    "crates/ptrace_probe",
]

# Explicitly set resolver due to virtual workspace, see
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"
