[package]
name = "composer"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1"
clap = { version = "4.2", features = ["derive"] }
color-eyre = "0.6"
cpal = "0.15"
composer_api = { path = "../composer_api" }
eyre = "0.6"
fundsp = "0.13"
rodio = { version = "0.17", features = ["symphonia-wav"] }
